@@ -82,85 +82,5 @@ class Peak_Core_Extension_Modules
         	return $e->getMessage();
         }		
 	}
-	
-	/**
-     * list old modules @deprecated
-     *
-     * @return array
-     */
-    public function get()
-    {
-        
-        //list modules directory with their additionnal info if exists
-        try
-        {
-
-            $it = new DirectoryIterator(Peak_Core::getPath('modules'));
-
-            while($it->valid())
-            {
-                if(($it->isDir()) && (!in_array($it->getFilename(),array('.','..'))))
-                {
-                    $mod = $it->getFilename();
-                    $plugin_file = Peak_Core::getPath('modules').'/'.$mod.'/'.$mod.'.php';
-                    
-                    if(file_exists($plugin_file))
-                    {
-                        $this->modules[$mod] = array('name' => $mod);
-                        
-                        $plugin_js = Peak_Core::getPath('modules').'/'.$mod.'/'.$mod.'.js';
-                        if(file_exists($plugin_js)) $info['js'] = $mod;                     
-                                            
-                        $plugin_info = Peak_Core::getPath('modules').'/'.$mod.'/'.$mod.'.ini';
-                        if(file_exists($plugin_info))
-                        {
-                            $info = parse_ini_file($plugin_info); 
-                            
-                            if(!isset($info['title'])) $info['title'] = $mod;
-                            
-                            if(!isset($info['login'])) $info['login'] = true;
-                            
-                            if((isset($info['devmode_only'])) && ($info['devmode_only']) && (!DEV_MODE)) {
-                                unset($this->modules[$mod]);
-                            }                          
-                            elseif((isset($info['hidden'])) && ($info['hidden'])) {
-                                unset($this->modules[$mod]);
-                            }
-                            else $this->modules[$mod] = array_merge($this->modules[$mod],$info);
-                        }
-                        else {
-                            $this->modules[$mod]['login'] = true;
-                            $this->modules[$mod]['title'] = $mod;
-                        }
-                         
-                    }
-                    
-                }
-              
-                $it->next();
-            }
-            
-            //echo '<pre>'; print_r($this->modules);
-            return $this->modules;
-        }
-        catch(Exception $e) { $this->w_errors[] = $e->getMessage(); return false; }
-
-    }
-    
-    /**
-     * Get module infos @deprecated
-     *
-     * @param string $name
-     * @param string $opt
-     * @return string/array
-     */
-    public function getModule($name,$opt = null)
-    {
-        if($this->isModule($name)) {
-            if(!isset($opt)) return $this->modules[$name];
-            return (isset($this->modules[$name][$opt])) ? $this->modules[$name][$opt] : null;
-        }
-        else return null;
-    }
-	
+		
 }
